syntax = "proto3";

package health;

service Health {
  rpc SetStatus(SetStatusRequest) returns (SetStatusResponse) {};
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {};
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

message SetStatusRequest {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  string service = 1;
  ServingStatus status = 2;
}

message SetStatusResponse {

}